--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
     "@ionic/storage": "2.0.0",
+    "@types/googlemaps": "^3.26.7",
+    "bourbon": "^4.2.7",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2",
-    "bourbon": "^4.2.7",
-    "@types/googlemaps": "^3.25.38"
+    "zone.js": "0.7.2"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.4",
