--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-server": "2.4.8",
     "@ionic/storage": "2.0.0",
     "bourbon": "^4.2.7",
+    "firebase": "^3.7.4",
     "ionic-angular": "2.2.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
