--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic/cloud-angular": "^0.11.0",
     "@ionic/storage": "2.0.0",
     "bourbon": "^4.2.7",
     "firebase": "^3.7.4",
