more ionic cloud updates

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
-  "name": "ion2-FullApp-PRO",
-  "app_id": "34bb558c",
+  "name": "toyiyo",
+  "app_id": "7d9fea45",
   "v2": true,
   "typescript": true
 }
